syntax = "proto3";
package wiki;

service WikiService {
  // Page operations
  rpc GetPage (PageRequest) returns (PageResponse);
  rpc CreatePage (CreatePageRequest) returns (PageResponse);
  rpc UpdatePage (UpdatePageRequest) returns (PageResponse);
  rpc ListPages (ListPagesRequest) returns (ListPagesResponse);
  
  // Version operations
  rpc GetPageVersion (VersionRequest) returns (PageResponse);
  rpc ListPageVersions (PageVersionsRequest) returns (ListVersionsResponse);
}

message PageRequest {
  string id = 1;
}

message CreatePageRequest {
  string title = 1;
  string content = 2;
  string author_id = 3;
  string category_id = 4;
}

message UpdatePageRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  string category_id = 5;
}

message PageResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  string category_id = 5;
  string version_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message ListPagesRequest {
  string category_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListPagesResponse {
  repeated PageResponse pages = 1;
  int32 total = 2;
}

message VersionRequest {
  string page_id = 1;
  string version_id = 2;
}

message PageVersionsRequest {
  string page_id = 1;
}

message ListVersionsResponse {
  repeated PageResponse versions = 1;
}
